# SyntaxFlow

./: CMakeLists.txt  backend.cpp  backend.h  build.bat  code_editor.cpp  code_editor.h  code_runner.cpp  code_runner.h  hoversidebar.cpp  hoversidebar.h  javabridge.cpp  javabridge.h  jsonutils.cpp  jsonutils.h  judgebridge.cpp  judgebridge.h  language_config.cpp  language_config.h  language_registry.cpp  language_registry.h  mainwindow.cpp  mainwindow.h  output_normalizer.h  problem_panel.cpp  problem_panel.h  problems.json  problemwidgets.cpp  problemwidgets.h  progressmanager.cpp  progressmanager.h  readme.md  testcase_panel.cpp  testcase_panel.h
Web_UI/: Main_Editor_Panel.html  Problem_List_Panel.html  problems.json
Web_UI/Extra_Component/: component.css
data/problems/hard/: median_sorted_arrays.json
data/problems/medium/: two_sum.json
examples/: main.cpp
problems/easy/: hello_world.json  palindrome_string.json  reverse_number.json  single_number.json  sum_of_digits.json
problems/hard/: median_sorted_arrays.json
problems/medium/: two_sum.json
src/: TreeSitterHighlighter.cpp  TreeSitterHighlighter.h
